[package]
name = "derisc0"
version = "0.1.0"
edition = "2021"

[features]
std = ["risc0-zkvm/std"]

[dependencies]
derisc0-macros = { path = "../derisc0-macros" }
# TODO unpin this version once the no_std functionality is fixed
risc0-zkvm = { version = "=0.16.0", default-features = false }
risc0-zkp = { version = "=0.16.0", default-features = false }
