[package]
name = "json-lib-example"
version = "0.1.0"
edition = "2021"

[dependencies]
derisc0 = { path = "../../derisc0" }
serde = { version = "1.0", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
# TODO unpin this version once the no_std functionality is fixed
risc0-zkvm = { version = "=0.16.0", default-features = false, features = ["std"] }
risc0-zkp = { version = "=0.16.0", default-features = false }

[workspace]
